# BreakOut

./: .gitignore  CMakeLists.txt  README.md
include/: entity.hpp  game.hpp  moving_entity.hpp  rect_shape.hpp  renderer.hpp  texture.hpp
src/: entity.cpp  game.cpp  main.cpp  moving_entity.cpp  rect_shape.cpp  renderer.cpp  test.cpp  texture.cpp
