cmake_minimum_required(VERSION 3.6.3)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE -DMAKE_BUILD_TYPE Debug)
add_executable(main src/main.cpp src/game.cpp include/game.hpp src/renderer.cpp src/entity.cpp src/rect_shape.cpp  include/entity.hpp include/rect_shape.hpp src/moving_entity.cpp include/moving_entity.hpp src/texture.cpp include/texture.hpp src/renderer.cpp include/renderer.hpp)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GUILE2.0 REQUIRED guile-2.0)
find_package(SFML 2.4 REQUIRED system window graphics)
include_directories(include ${GUILE2.0_INCLUDE_DIRS} ${SFML_INCLUDE_DIR})
target_link_libraries(main ${GUILE2.0_LIBRARIES} ${SFML_LIBRARIES})
